technologies : fixed animation on click for dark mode

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -461,4 +461,9 @@ p {
         text-align: center;
         transform : translate(0%)
     }
+
+    .logo-techno-dark-unclicked {
+        filter: brightness(1000%);
+    }
 }
+
